# aioschema

./: .gitignore  AIOSchema Field Reference Guide.md  AIOSchema_Field_Reference_Guide.md  API.md  CHANGELOG.md  CONFORMANCE_VECTORS.md  LICENSE.md  NOTICE  README.md
cli/: LICENSE.md  README.md  cli.js  package.json
conformance/: CONFORMANCE_VECTORS.md  README.md  cross_verify_vectors.json
conformance/v0.5.6/: TV-01.json  TV-02.json  TV-03.json  TV-04.json  TV-05.json  TV-06.json  TV-07.json  TV-08.json  TV-09.json  TV-10.json  TV-11.json  TV-12.json  TV-13.json  TV-14.json  TV-15.json  TV-16.json  TV-17.json  TV-18.json  TV-19.json  TV-20.json  TV-21.json  TV-22.json  TV-23.json  TV-24.json  TV-25.json  index.json
implementations/: API.md
implementations/dotnet/: AIOSchema.csproj  Algorithms.cs  CrossVerify.cs  Ed25519.cs  LICENSE.md  Manifest.cs  Program.cs  README.md  TestSuite.cs  Types.cs  Uuid7.cs  Verify.cs
implementations/go/: LICENSE.md  README.md  aioschema_test.go  algorithms.go  cross_verify_test.go  go.mod  manifest.go  sha3.go  types.go  verify.go
implementations/js/: README.md  (+6 more)
implementations/rust/: Cargo.toml  LICENSE.md  README.md
implementations/rust/src/: algorithms.rs  cross_verify.rs  lib.rs  types.rs  unit_tests.rs  verify.rs
implementations/rust/tests/: cross_verify.rs  unit_tests.rs
publications/: 2026-06-03-as-pos-art50-001.md  2026-06-03-as-pos-art50-001.md.aios.json
spec/: AIOSchema_v0_5_5_Specification .md  AIOSchema_v0_5_5_Specification.md  README-v0.5.5.md  README-v0.5.6.md  README.md  as-doc-spec-018f-v0_5.md
(+35 files in other folders)
